@@ -34,5 +34,3 @@ head.cat <- function(...) {
     }
 
 }
-
-
