@@ -4,3 +4,5 @@ hedgehog
 An R package of functions for personal use, inspired by [Hilary Parker's blogpost](https://hilaryparker.com/2013/04/03/personal-r-packages/). I started working on this in 2015, and have added functions as I've been exposed to new problems/ application areas through work and studies. 
 
 At present, the package includes functions (in various states of completeness) for Monte Carlo integration, survival analysis, processing TCGA datasets, and generic helper functions.
+
+For a better idea of what the package can do, check out the [plotting vignette](https://github.com/erleholgersen/hedgehog/blob/master/vignettes/Plotting.Rmd).
