@@ -51,3 +51,17 @@ test.data <- data.frame(
 
 stripboxplot(y ~ x, test.data);
 ```
+
+By default, all background points are grey. We can change this by using the `points.col` argument. It is passed straight to `stripchart`, and thus follows the stripchart convention of assigning colours by grouping variable. 
+
+```{r}
+stripboxplot(
+    y ~ x, 
+    test.data,
+    points.col = c('darkgreen', 'orange', 'firebrick')
+    );
+```
+
+
+
+
