@@ -1,3 +1,7 @@
+hedgehog v0.1.3                         2018-01-17
+==================================================
+- variable point colours in stripboxplot
+
 hedgehog v0.1.2                         2018-01-16
 ==================================================
 - KM plot colours
